--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="core.jar"/>
+	<classpathentry kind="lib" path="controlP5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
